fixed icon alignment

--- a/src/styles/sass/components/_buttons.scss
+++ b/src/styles/sass/components/_buttons.scss
@@ -236,6 +236,7 @@ button {
   gap: 12px;
   img {
     width: 40px;
+    height: 40px;
   }
 
   span {
@@ -244,10 +245,6 @@ button {
   }
 
   @media (min-width: 1020px) {
-    img {
-      width: 40px;
-    }
-
     span {
       font-size: $text-base;
     }
